src/objects/SelectedProduct__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>OrderType</label>
        <picklist>
            <picklistValues>
                <fullName>DirectOrder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InDirectOrder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>SelectedProducts</relationshipLabel>
        <relationshipName>SelectedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceBookEntryId__c</fullName>
        <externalId>true</externalId>
        <label>PriceBookEntry</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThirdPartyOrderComment__c</fullName>
        <label>ThirdPartyOrderComment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ThirdPartyOrderStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ThirdPartyOrderStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseStandardPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseStandardPrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>unitPrice__c</fullName>
        <label>unitPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>SelectedProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SelectedProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SelectedProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>